Fully integrating Jersey 2 into Framework

--- a/web/WEB-INF/log4j.properties
+++ b/web/WEB-INF/log4j.properties
@@ -20,6 +20,9 @@ log4j.logger.org.tharrisx.framework.pipe=warn
 log4j.logger.org.tharrisx.framework.store=warn
 log4j.logger.org.tharrisx.util.spring=info
 
+## jersey
+log4j.logger.org.glassfish.jersey=debug
+
 ### For Hibernate
 log4j.logger.org.hibernate=warn
 log4j.logger.org.hibernate.bytecode=warn
