--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -56,7 +56,7 @@
   <!-- Jersey Servlet -->
   <servlet>
     <servlet-name>framework</servlet-name>
-    <servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class>
+    <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
     <init-param>
       <param-name>javax.ws.rs.Application</param-name>
       <param-value>org.tharrisx.framework.rest.FrameworkApplication</param-value>
