Adding sortBy and sortDirection to all pageable lists

--- a/web/WEB-INF/log4j.properties
+++ b/web/WEB-INF/log4j.properties
@@ -18,10 +18,10 @@ log4j.logger.org.tharrisx.framework.callstats=info
 log4j.logger.org.tharrisx.framework.rest=info
 log4j.logger.org.tharrisx.framework.pipe=warn
 log4j.logger.org.tharrisx.framework.store=warn
-log4j.logger.org.tharrisx.util.spring=info
+log4j.logger.org.tharrisx.util.spring=warn
 
 ## jersey
-log4j.logger.org.glassfish.jersey=debug
+log4j.logger.org.glassfish.jersey=info
 
 ### For Hibernate
 log4j.logger.org.hibernate=warn
