--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -64,7 +64,11 @@
   </servlet>
   <servlet-mapping>
     <servlet-name>framework</servlet-name>
-    <url-pattern>/*</url-pattern>
+    <url-pattern>/-/*</url-pattern>
   </servlet-mapping>
+
+  <welcome-file-list>
+    <welcome-file>index.html</welcome-file>
+  </welcome-file-list>
 
 </web-app>
